add upload photo and view photo api
